--- a/config/php/7.0/fpm/php-fpm.conf
+++ b/config/php/7.0/fpm/php-fpm.conf
@@ -29,7 +29,7 @@ pid = /var/run/php7.0-fpm.pid
 ; in a local file.
 ; Note: the default prefix is /var
 ; Default Value: log/php-fpm.log
-error_log = /app/logs/php70/fpm.log
+error_log = /app/data/logs/fpm.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
