--- a/config/php/7.0/fpm/pool.d/www.conf
+++ b/config/php/7.0/fpm/pool.d/www.conf
@@ -392,5 +392,5 @@ catch_workers_output = yes
 ;php_admin_value[memory_limit] = 32M
 
 php_admin_flag[log_errors] = on
-php_admin_value[error_log] = /app/logs/php70/error.log
-php_admin_value[session.save_path] = /app/sessions
+php_admin_value[error_log] = /app/data/logs/error.log
+php_admin_value[session.save_path] = /app/data/sessions
